# internal/server/repository/postgres/model.go
@@ -3,24 +3,13 @@ package postgres
 import (
 	"encoding/json"
 	"time"
-)
 
-type DataType string
-
-func (dt DataType) String() string {
-	return string(dt)
-}
-
-const (
-	TEXT        DataType = "Text"
-	CARD        DataType = "Card"
-	FILE        DataType = "File"
-	CREDENTIALS DataType = "Credentials"
+	"github.com/mdflamingo/GophKeeper/internal/model"
 )
 
 type SecretDB struct {
 	ID        int             `json:"id"`
-	DataType  DataType        `json:"data_type"`
+	DataType  model.DataType  `json:"data_type"`
 	MetaData  json.RawMessage `json:"meta_data"`
 	CreatedAt time.Time       `json:"created_at"`
 }
